--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "aws-sdk": "^2.922.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "file-type": "^16.5.0",
     "firebase": "^8.6.1",
     "knex": "^0.95.4",
+    "multiparty": "^4.2.2",
     "pg": "^8.6.0"
   },
   "devDependencies": {
